--- a/starter/project4/templates/register.html
+++ b/starter/project4/templates/register.html
@@ -4,7 +4,10 @@
   <div class="card">
     <div class="card-header">Register</div>
     <div class="card-body">
-      <form>
+      {% if msg %}
+      <div class="alert alert-danger" role="alert">{{msg}}</div>
+      {% endif %}
+      <form method="post" action="/auth/register">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Email</label>
@@ -50,7 +53,7 @@
       </form>
     </div>
     <div class="card-footer text-muted">
-      <a href="#"> Already have an account? </a>
+      <a href="/auth"> Already have an account? </a>
     </div>
   </div>
 </div>
